--- a/modulo-1/1.11/modulo-1-leccion-11-ejercicio-5/index.html
+++ b/modulo-1/1.11/modulo-1-leccion-11-ejercicio-5/index.html
@@ -9,8 +9,8 @@
   <main class="main">
     <div class="container">
       <form action="/action_page.php">
-        <h1>Create an account</h1>
-        <h2>It's free and always will be</h2>
+        <h1>Formulario gmail</h1>
+        <h2>Introduce tus datos</h2>
         <div><h3>Nombre</h3></div>
         <input
           class="firstname"
