--- a/modulo-1/1.12/modulo-1-leccion-12-ejercicio-6/index.html
+++ b/modulo-1/1.12/modulo-1-leccion-12-ejercicio-6/index.html
@@ -15,7 +15,8 @@
         background: green;
         height: 15px;
       }
-      .col-6, .col-4 {
+      .col-6,
+      .col-4 {
         padding: 0;
       }
       .row {
@@ -37,16 +38,16 @@
         </div>
 
       </div>
-        <div class="row">
-          <div class="col-6">
-              <div class="input mr-2"></div>
-          </div>
-          <div class="col-6">
-              <div class="input ml-2"></div>
-          </div>
-        </div>
-      <div class="row">
-        <div class="input col-12"></div>
+    <div class="row">
+      <div class="col-6">
+        <div class="input mr-2"></div>
       </div>
+      <div class="col-6">
+        <div class="input ml-2"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="input col-12"></div>
+    </div>
   </body>
 </html>
