--- a/modulo-1/1.12/modulo-1-leccion-12-ejercicio-5/index.html
+++ b/modulo-1/1.12/modulo-1-leccion-12-ejercicio-5/index.html
@@ -15,10 +15,16 @@
   <body>
     <main>
       <div class="wrapper">
-        <div class="item item1">HEADER</div>
-        <div class="item item2">MENU</div>
-        <div class="item item3">CONTENT</div>
-        <div class="item item4">FOOTER</div>
+        <div class="row">
+          <div class="item item1 col-12">HEADER</div>
+        </div>
+        <div class="row">
+          <div class="item item2 col-8">MENU</div>
+          <div class="item item3 col-4">CONTENT</div>
+        </div>
+        <div class="row">
+          <div class="item item4 col-12">FOOTER</div>
+        </div>
       </div>
     </main>
   </body>
