Add exercises lección1

--- a/modulo-2/modulo-2-leccion-1-ejercicio-7/index.html
+++ b/modulo-2/modulo-2-leccion-1-ejercicio-7/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>Ejercicio 6</title>
+    <title>Ejercicio 7</title>
     <style>
       body {
         background-color: aquamarine;
@@ -11,7 +11,8 @@
     </style>
   </head>
   <body>
-    <div class="container"></div>
+    <ul class="list"></ul>
+
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
