--- a/modulo-2/modulo-2-leccion-1-ejercicio-8/index.html
+++ b/modulo-2/modulo-2-leccion-1-ejercicio-8/index.html
@@ -2,11 +2,12 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>Mi primer código JavaScript</title>
+    <title>Ejercicio 8</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1 class="selection">Mi contraseña es: <span>Ada2020</span>.</h1>
-
+    <div class="button">Click me</div>
+    <div class="button b2">Click me</div>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
