--- a/modulo-2/modulo-2-leccion-3-ejercicio-1/index.html
+++ b/modulo-2/modulo-2-leccion-3-ejercicio-1/index.html
@@ -1,17 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="utf-8" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Ejercicio 10</title>
-  <link rel="stylesheet" href="./main.css" />
-
-<body>
-  <main class="main">
-    <p class="age">29</p>
-  </main>
-  <script type="text/javascript" src="main.js"></script>
-</body>
-
+  <head>
+    <meta charset="utf-8" />
+    <title>Mi primer código JavaScript</title>
+  </head>
+  <body>
+    <div class="user">
+      <h1 class="user__name">Bill</h1>
+      <img class="user__avatar" />
+    </div>
+    <script type="text/javascript" src="main.js"></script>
+  </body>
 </html>
