--- a/modulo-2/modulo-2-leccion-5-ejercicio-3/index.html
+++ b/modulo-2/modulo-2-leccion-5-ejercicio-3/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>Dame ipsum</title>
+    <title>2.4.3</title>
     <link href="styles/main.css" rel="stylesheet" />
   </head>
   <body>
