--- a/modulo-2/modulo-2-leccion-7-ejercicio-3/index.html
+++ b/modulo-2/modulo-2-leccion-7-ejercicio-3/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>2.6.6</title>
+    <title>2.7.3</title>
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Open the console!</h1>
+    Consoléame!
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
