--- a/modulo-2/modulo-2-leccion-7-ejercicio-6/index.html
+++ b/modulo-2/modulo-2-leccion-7-ejercicio-6/index.html
@@ -6,11 +6,20 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <label for="movie">¿Cuáles son tus dos películas favoritas?</label>
+    <label for="movie" class="question"
+      >¿Cuáles son tus dos películas favoritas?</label
+    >
     <input
       placeholder="Laberinto de pasiones"
       type="text"
-      id="movie"
+      id="movie1"
+      name="movie"
+      class="movie"
+    />
+    <input
+      placeholder="The goonies"
+      type="text"
+      id="movie2"
       name="movie"
       class="movie"
     />
